# conversations-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/conversations/: __init__.py  conversations.py  utils.py
tests/: test_conversation.py  test_conversation_builder_for_rasa_events.py  test_conversation_with_actions.py  test_save_and_load_json.py  test_simple_conversation.py
